# Employee-Self-Service-Agent-Developer-Kit

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  agency.yaml  mtk.ps1  mtk.sh  pyproject.toml  requirements-dev.txt
tools/ess-nextgen-migration-toolkit/: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
tools/ess-nextgen-migration-toolkit/.local/: dev-config.example.json
tools/ess-nextgen-migration-toolkit/scripts/: mtk.ps1  mtk.sh
tools/ess-nextgen-migration-toolkit/src/constants/: __init__.py  auth.py
tools/ess-nextgen-migration-toolkit/src/core/auth/: __init__.py  token_provider.py
tools/ess-nextgen-migration-toolkit/src/core/logging/: __init__.py  logger.py  reporter.py  session_manager.py
tools/ess-nextgen-migration-toolkit/src/core/models/: __init__.py  execution_context.py  migration_context.py
tools/ess-nextgen-migration-toolkit/src/core/outbound/: __init__.py  dataverse_api.py  dataverse_client.py  exceptions.py
tools/ess-nextgen-migration-toolkit/src/core/pipeline/: __init__.py  exceptions.py  pipeline.py  registry.py  staged.py  step.py  toolkit.py  typing.py
tools/ess-nextgen-migration-toolkit/src/core/pipelines/: __init__.py  chained_pipeline.py  context.py  pipeline.py  pipeline_step.py
tools/ess-nextgen-migration-toolkit/src/modules/: __init__.py
tools/ess-nextgen-migration-toolkit/src/modules/migration/: __init__.py  migration_pipeline.py  migration_step.py
tools/ess-nextgen-migration-toolkit/src/modules/migration/models/: __init__.py  migration_context.py
tools/ess-nextgen-migration-toolkit/src/modules/migration/steps/: __init__.py
tools/ess-nextgen-migration-toolkit/src/modules/postprocessing/: __init__.py  output_pipeline.py
tools/ess-nextgen-migration-toolkit/src/modules/postprocessing/steps/: __init__.py  generate_report_step.py  validate_migration_step.py  writeback_step.py
tools/ess-nextgen-migration-toolkit/src/modules/preprocessing/: __init__.py  input_pipeline.py
tools/ess-nextgen-migration-toolkit/src/modules/preprocessing/steps/: __init__.py  agent_selection_step.py  gather_alm_customer_input_step.py  gather_input_with_auth_step.py  gather_preferred_solution_step.py  retrieve_agent_configuration_step.py  retrieve_customizations_step.py
tools/ess-nextgen-migration-toolkit/src/modules/transformation/: __init__.py  migration_step.py  transformation_pipeline.py
tools/ess-nextgen-migration-toolkit/src/modules/transformation/models/: __init__.py  customization_component.py  execution_mode.py  migration_context.py  writeback_plan.py
tools/ess-nextgen-migration-toolkit/src/modules/transformation/steps/: __init__.py  apply_da_compatibility_step.py  deprecate_trigger_topic_step.py  disable_unsupported_node_topics_step.py  disable_unsupported_trigger_topics_step.py  handle_answer_question_with_ai_node_step.py  handle_conversation_history_node_step.py  handle_generated_response_topic_step.py  handle_include_selected_topics_node_step.py  handle_invoke_ai_builder_model_action_node_step.py  handle_on_activity_topic_step.py  handle_on_escalate_topic_step.py  handle_on_plan_complete_topic_step.py  handle_on_select_intent_topic_step.py  (+8 more)
tools/ess-nextgen-migration-toolkit/src/service/: __init__.py  constants.py  mtk_orchestrator.py  reporter.py  utils.py
tools/ess-nextgen-migration-toolkit/tests/: __init__.py
tools/ess-nextgen-migration-toolkit/tests/golden/: __init__.py  test_handle_deprecated_topics_golden.py  test_replace_end_conversation_golden.py
tools/ess-nextgen-migration-toolkit/tests/unit/service/: test_mtk_orchestrator.py  test_reporter.py
(+699 files in other folders)
